Fix typos in project organization section

--- a/content/project_organization.tex
+++ b/content/project_organization.tex
@@ -2,7 +2,7 @@
 \label{section:project_organization}
 
 All work in this project was realized within the TUM Data Innovation Lab in collaboration with the Chair of 
-Aerodynamics and Fluid Mechanics. Special thanks go to our Scientific Lead PhD candidate Ludger Paehler, 
+Aerodynamics and Fluid Mechanics. Special thanks go to our Scientific Lead PhD candidate Ludger P\"ahler, 
 as well as our Project Lead and Co-Mentor Dr. Ricardo Acevedo Cabra.
 
 Our project was structured in 4 phases:
@@ -10,22 +10,22 @@ Our project was structured in 4 phases:
 \begin{enumerate}
     \item \textit{Literature review (4 weeks)}: We read through important papers in the topics of our project such 
     as Graph Learning, Graph Neural Networks, Graph Sampling, Message Passing for Quantum Chemistry, 
-    and Scalable Machine Learning, and discussed them weekly.
+    and Scalable Machine Learning; and discussed them weekly.
     \item \textit{Baseline (3 weeks)}: After getting into the topic theoretically, we started looking at the OCP 
     project and elaborating the current state of the project to see what baseline we are comparing against.
-    \item \textit{Implementation (4 weeks)}: After defining the baseline, we integrated and tested all deepspeed 
+    \item \textit{Implementation (4 weeks)}: After defining the baseline, we integrated and tested all DeepSpeed 
     stages in the OCP project during our implementation phase.
     \item \textit{Evaluation and Final report (3 weeks)}: In the final weeks of the project, we conducted baselines 
-    and deepspeed experiments and recorded our observations and analysis. In addition, we focused on the final 
-    report during this phase.
+    and DeepSpeed experiments and recorded our observations and analysis. In addition, we focused on the final 
+    report in this phase.
 \end{enumerate}
 
 Our team met twice each week on Monday and Friday to discuss progress and define next steps. Most of 
 the time, individual team members met two to three additional times during the week to discuss specific 
-tasks in their area of activity. For organizational porposes, team and personal conversations we used 
+tasks in their area of activity. For organizational purposes, team and personal conversations, we used 
 a private Slack Channel.
 
-For version management of our code we created a Github organization\footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling}} 
+For version management of our code we created a GitHub organization\footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling}} 
 where we placed multiple projects like our own fork of the OCP project, evaluation scripts and also 
 the source files for the final report. We tracked problems and errors we encountered as issues in the 
 corresponding projects and worked with a branch structure to avoid disrupting the work of our teammates.
