--- a/content/project_organization.tex
+++ b/content/project_organization.tex
@@ -23,7 +23,7 @@ Our project was structured in 4 phases:
 Our team met twice each week on Monday and Friday to discuss progress and define next steps. Most of 
 the time, individual team members met two to three additional times during the week to discuss specific 
 tasks in their area of activity. For organizational purposes, team and personal conversations, we used 
-a private Slack Channel.
+a private Slack channel.
 
 For version management of our code we created a GitHub organization\footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling}} 
 where we placed multiple projects like our own fork of the OCP project, evaluation scripts and also 
