--- a/bibliography.bib
+++ b/bibliography.bib
@@ -340,4 +340,15 @@ eprint = {
   year =         {2021}
 }
 
+@misc{https://doi.org/10.48550/arxiv.2204.02782,
+  doi = {10.48550/ARXIV.2204.02782},
+  url = {https://arxiv.org/abs/2204.02782},
+  author = {Gasteiger, Johannes and Shuaibi, Muhammed and Sriram, Anuroop and Günnemann, Stephan and Ulissi, Zachary and Zitnick, C. Lawrence and Das, Abhishek},
+  keywords = {Machine Learning (cs.LG), Materials Science (cond-mat.mtrl-sci), Chemical Physics (physics.chem-ph), Computational Physics (physics.comp-ph), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
+  title = {How Do Graph Networks Generalize to Large and Diverse Molecular Systems?},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
 
