--- a/content/preliminaries/scalable_ml.tex
+++ b/content/preliminaries/scalable_ml.tex
@@ -17,7 +17,7 @@ several processes presents a way to further scale, whereby the processes can als
 This is known as scaling out. 
 
 A single machine multi-GPU setup is an interesting middle ground between scaling up and scaling out. Although the entire 
-pipeline is executed on only one machine, we still employ a multi process system since each of the GPUs is used through 
+pipeline is executed on only one machine, we still employ a multi-process system since each of the GPUs is used through 
 independent processes.
 
 \subsubsection{Data, Model and Pipeline Parallelism}
