--- a/content/implementation/general.tex
+++ b/content/implementation/general.tex
@@ -3,46 +3,46 @@
 
 \subsection{Usage of DeepSpeed}
 
-Our goal for this project was to use the Deepspeed engine to speed up and scale 
-large-scale Graph Neural Networks. The Open Catalyst Project presents the ideal 
+Our goal for this project was to use the DeepSpeed engine to speed up and scale 
+GNNs. The Open Catalyst Project presents the ideal 
 benchmark for our acceleration approaches since it contains several model definitions 
 for GNNs in the context of molecular simulations. Previous research has shown 
 that scaling OCP models to multiple hundreds of millions of parameters or even 
 billions of parameters leads to better accuracies. Therefore we want to utilize 
-Deepspeed to scale beyond standard Data Parallelism and enable training of billion 
+DeepSpeed to scale beyond standard data parallelism and enable training of billion 
 parameter models.
 
-We took multiple steps to integrate Deepspeed into the OCP project, which we will 
-descript in the following section. All of our changes are available on Github in our 
+We took multiple steps to integrate DeepSpeed into the OCP project, which we will 
+descript in the following section. All of our changes are available on GitHub in our 
 organization fork of OCP\footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling/ocp}}.
 
-To start off, we initialized the Deepspeed engine. 
+To start off, we initialized the DeepSpeed engine. 
 The initialization in our code looks roughly like this:
 
 \begin{python}
 self.model, self.optimizer, _, _ = deepspeed.initialize(
-                    config=self.config["deepspeed_config"],
-                    model=self.model,
-                    model_parameters=self.model.parameters(),
-                    optimizer=self.optimizer,
-                )
+    config=self.config["deepspeed_config"],
+    model=self.model,
+    model_parameters=self.model.parameters(),
+    optimizer=self.optimizer,
+)
 \end{python}
 
-Deepspeed provides a model and optimizer wrapper to offer the same PyTorch API as 
+DeepSpeed provides a model and optimizer wrapper to offer the same PyTorch API as 
 before, but performs optimizations under the hood when forward, backward and step 
 functions are invoked. Furthermore, we had to replace the original distributed 
-environment setup with Deepspeeds distributed setup, which particulary useful for 
-Deepspeed to spawn CPU worker processes for optimizer or parameter offloading. We 
+environment setup with DeepSpeed's distributed setup, which particulary useful for 
+DeepSpeed to spawn CPU worker processes for optimizer or parameter offloading. We 
 will dive deeper into this optimization in Section~\ref{subsection:offloading}.
 
-To enable or disable specific feature of the optimizer engine, Deepspeed is 
+To enable or disable specific feature of the optimizer engine, DeepSpeed is 
 configured using an extra JSON file. We extended the previous OCP configuration 
-code to handle the deepspeed config as additional argument and pass it through 
-to the Deepspeed engine at the beginning of training. This also allows us to 
+code to handle the DeepSpeed config as additional argument and pass it through 
+to the DeepSpeed engine at the beginning of training. This also allows us to 
 make feature specific changes to codebase, since we also parse the config and 
 make it available at runtime.
 
-An example Deepspeed configuration file looks like this:
+An example DeepSpeed configuration file looks like this:
 
 \begin{json}
 {
@@ -59,15 +59,19 @@ An example Deepspeed configuration file looks like this:
 }
 \end{json}
 
-In this configuration, \textit{train\_micro\_batch\_size\_per\_gpu} refers to the 
-batch size processing by one GPU in one step. \textit{gradient\_accumulation\_steps} 
+In this configuration, \texttt{train\_micro\_batch\_size\_per\_gpu} refers to the 
+batch size processing by one GPU in one step. \texttt{gradient\_accumulation\_steps} 
 refers to the number of steps to accumulate gradients before averaging and applying 
-them. \textit{train\_batch\_size} is the effective batch size per accumulation step, 
-so total number of GPUs $\times$ \textit{train\_micro\_batch\_size\_per\_gpu} $\times$ 
-\textit{gradient\_accumulation\_steps}. 
+them. \texttt{train\_batch\_size} is the effective batch size per accumulation step, 
+so 
+\begin{align*}
+    \text{\texttt{train\_batch\_size}} \; &= \; 
+    \# \: \text{GPUs} \cdot \text{\texttt{train\_micro\_batch\_size\_per\_gpu}} \\
+    &\qquad \cdot \text{\texttt{gradient\_accumulation\_steps}} \text{.}
+\end{align*}
 
-We introduce the other configurations in later sections. \textit{fp16} and 
-\textit{bf16} are mixed-precision configurations and are explained in Section~
-\ref{subsection:mixedprecision}. All configurations in \textit{zero\_optimization} 
+We introduce the other configurations in later sections. \texttt{fp16} and 
+\texttt{bf16} are mixed-precision configurations and are explained in Section~
+\ref{subsection:mixedprecision}. All the configurations in \texttt{zero\_optimization} 
 are introduced in Section~\ref{subsection:zero} and amended in Section~
 \ref{subsection:offloading} by offload features.
