--- a/content/preliminaries/ocp.tex
+++ b/content/preliminaries/ocp.tex
@@ -15,7 +15,7 @@ The Open Catalyst Project\footnote{\url{https://github.com/Open-Catalyst-Project
 University's Department of Chemical Engineering which was launched in 2020 and 
 aims to provide a unified dataset and baseline models for predicting forces and energy in molecular 
 simulations of catalysts. The project provides the Open Catalyst 2020 (OC20) dataset, which contains 
-1.2 million relaxations of molecular adsorptions onto surfaces simulated with DFT. Fundamentally this 
+about 1.2 million relaxations of molecular adsorptions onto surfaces simulated with DFT. Fundamentally this 
 precomputed dataset opens the door for precise predictions through machine learning models and allows
 for large-scale explorations of new catalysts.
 
