Add tikz fp16/bf16 figures

--- a/content/conclusion.tex
+++ b/content/conclusion.tex
@@ -44,7 +44,7 @@ also prove true for longer and more scaled-up training and if the activation of 
 influences performance of the models in some way. 
 In addition, it could also be very interesting to explore if the results we obtained for our GemNet setup
 can be transferred to the current state-of-the-art architecture, GemNet-OC, which does not only
-consider 3- but 4-way interactions.
+consider 3- but also 4-way interactions.
 Apart from all of this, we would be curious to see some of the DeepSpeed features being
 combined with other parallization strategies in the domain of atomic simulations, like 
 graph parallelism \cite{https://doi.org/10.48550/arxiv.2203.09697} which was also added to
