Put fp16 and bfloat16 into one figure

--- a/figures/deepspeed/zero.tex
+++ b/figures/deepspeed/zero.tex
@@ -112,7 +112,7 @@
         \caption*{\scriptsize \textbf{ZeRO stage 1}}
     \end{subfigure}
 
-    \vspace*{0.5em}
+    %\vspace*{0.5em}
 
     \begin{subfigure}[t]{0.5\textwidth}
         \centering
@@ -177,7 +177,7 @@
         \end{tikzpicture}
         \caption*{\scriptsize \textbf{ZeRO stage 3}}
     \end{subfigure}
-    \vspace*{0.5em}
+    \vspace*{-0.5em}
 
     \captionsetup{width=\dimexpr\textwidth-1.5cm\relax}
     \caption{GPU memory utilization with different stages of ZeRO activated.
