--- a/content/implementation/mixed_precision.tex
+++ b/content/implementation/mixed_precision.tex
@@ -15,19 +15,11 @@ sign. This halves the used memory compared to the default single-precision float
 for the exponent and 24 bits for the fraction. However, FP16 lowers the precision and reduces the range of numbers 
 that can be represented, making calculations less accurate and increasing the risk of overflows/underflows.
 
-\input{figures/mixed_precision/fp16.tex}
-
 PyTorch and Deepspeed offer automatic mixed precision for gradients. Developers can regions with context managers 
 to allow PyTorch to automatically choose the precision for GPU operations. Unfortunately both autocast modules from 
 both PyTorch and Deepspeed failed to detect parameters and gradients in the OCP models when we applied the context 
 manager. Our solution was to manually cast parameters to half precision when Deepspeed is used. After our adaptions 
-FP16 can be used by just setting one flag in the Deepspeed configuration:
-
-\begin{json}
-"fp16": {
-    "enabled": true
-}
-\end{json}
+FP16 can be used by just setting the \texttt{fp16} flag in the DeepSpeed configuration.
 
 \subsubsection{BFloat16}
 
@@ -35,15 +27,8 @@ As mentioned before, the use of FP16 leads to a higher risk of overflows/underfl
 of gradients when using FP16 with Deepspeed. To avoid overflows Deepspeed offers support for the Bfloat16 number 
 format which allocates more bits to the exponent to extent the range of representable numbers while lowering 
 precision.
-
-\input{figures/mixed_precision/bloat16.tex}
-
 As with FP16, we had to include manual type cast in the OCP codebase to integrate Bfloat16 support. 
-Bfloat16 can also be enabled from the Deepspeed configuration
+Bfloat16 can also be enabled from the Deepspeed configuration using the \texttt{bf16} flag.
 
-\begin{json}[language=json,firstnumber=1]
-"bf16": {
-    "enabled": true
-}
-\end{json}
+\input{figures/mixed_precision/half_precision.tex}
 
