Change json colors

--- a/preamble.tex
+++ b/preamble.tex
@@ -266,10 +266,10 @@ literate=*%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\colorlet{punct}{red!60!black}
-\definecolor{delim}{RGB}{20,105,176}
-\colorlet{numb}{magenta!60!black}
-\definecolor{jsonStringColor}{RGB}{6,125,23}
+\colorlet{punct}{tum-orange}
+\colorlet{delim}{tum-orange}
+\colorlet{numb}{tum-dark-green}
+\colorlet{jsonStringColor}{tum-dark-blue}
 
 \lstdefinestyle{myjson}{
     basicstyle=\ttfamily\footnotesize,%\setstretch{.5},
