--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -3,10 +3,10 @@
 \subsection{Motivation}
 
 Training large-scale models is the Formula 1 of the Machine learning research community: Large labs and corporations with 
-almost unlimited resources compete to outperform each other in model size and accuracy improvements in the decimal points. 
+almost unlimited resources compete to outperform each other in model size and accuracy improvements to the decimal points. 
 Consequently, in recent years there has been a surge of more efficient and scalable methods to train deep learning models 
-in parallel on multiple GPUs or even multiple machines. Most of the methods were desinged for large language models, however 
-the tackle more general problems of scalable machine learning such as linear scalability, memory efficiency and 
+in parallel on multiple GPUs or even multiple machines. Most of the methods are desinged for large language models, however 
+also offer general solutions to problems such as linear scalability, memory efficiency and 
 communication reduction. We therefore adopted some of these scaling methods and applied them to machine learning models 
 that operate on graphs. 
 
